--- a/package.json
+++ b/package.json
@@ -12,21 +12,29 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^12.0.0",
+    "@expo/vector-icons": "^12.0.5",
+    "@react-native-async-storage/async-storage": "^1.15.14",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "@tensorflow-models/mobilenet": "^2.1.0",
+    "@tensorflow/tfjs": "^3.12.0",
+    "@tensorflow/tfjs-react-native": "^0.8.0",
     "expo": "~44.0.0",
     "expo-asset": "~8.4.4",
+    "expo-camera": "^12.1.0",
     "expo-constants": "~13.0.0",
     "expo-font": "~10.0.4",
+    "expo-gl": "^11.1.1",
     "expo-linking": "~3.0.0",
     "expo-splash-screen": "~0.14.0",
-    "expo-status-bar": "~1.2.0",
+    "expo-status-bar": "^1.2.0",
     "expo-web-browser": "~10.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-fs": "^2.18.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-size-matters": "^0.4.0",
