--- a/package.json
+++ b/package.json
@@ -5,11 +5,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject",
-    "test": "jest --watchAll"
-  },
-  "jest": {
-    "preset": "jest-expo"
+    "eject": "expo eject"
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.5",
@@ -24,16 +20,25 @@
     "expo-asset": "~8.4.4",
     "expo-camera": "^12.1.0",
     "expo-constants": "~13.0.0",
+    "expo-contacts": "^10.1.0",
     "expo-font": "~10.0.4",
     "expo-gl": "^11.1.1",
+    "expo-google-sign-in": "~10.1.0",
+    "expo-image-picker": "^12.0.1",
     "expo-linking": "~3.0.0",
     "expo-splash-screen": "~0.14.0",
     "expo-status-bar": "^1.2.0",
     "expo-web-browser": "~10.1.0",
+    "firebase": "^9.6.2",
+    "moment": "^2.29.1",
+    "nanoid": "^3.1.32",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-fs": "^2.18.0",
+    "react-native-get-random-values": "^1.7.2",
+    "react-native-gifted-chat": "^0.16.3",
+    "react-native-image-viewing": "^0.2.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
@@ -42,12 +47,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.64.12",
-    "jest": "^26.6.3",
-    "jest-expo": "~44.0.1",
-    "react-test-renderer": "17.0.1",
-    "typescript": "~4.3.5"
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
+    "eslint": "^8.6.0"
   },
   "private": true
 }
